# rubik_cube

./: CMakeLists.txt  README.md  plan
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Cube/: Cube.cpp  Cube.h
src/RubikCube/: RubikCube.cpp  RubikCube.h
src/Window/: Events.cpp  Events.h  Window.cpp  Window.h
src/graphics/: Shader.cpp  Shader.h
src/res/: main.glslf  main.glslv
